--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": ">=5.3.1"
     },
     "replace": {
-        "undf/QuizBundle": "dev-master"
+        "undf/quiz-bundle": "dev-master"
     },
     "autoload": {
         "psr-0": { "Egulias\\QuizBundle" : "" }
